--- a/installer/payload/scratchgpio4plus.desktop
+++ b/installer/payload/scratchgpio4plus.desktop
@@ -2,10 +2,10 @@
 Encoding=UTF-8
 Version=1.0
 Type=Application
-Exec=./scratchgpio4/scratchgpio4plus.sh
+Exec=./scratchgpio5/scratchgpio5plus.sh
 Icon=scratch
 Terminal=false
-Name=Scratch GPIO4plus
+Name=ScratchGPIO 5 Plus
 Comment= Programming system and content development tool
 Categories=Application;Education;Development;
 MimeType=application/x-scratch-project
